[package]
name = "dotloy"
version = "0.1.5"
edition = "2021"
authors = ["0x00002a"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive", "cargo"] }
clap_complete = "4.3.0"
colored = "2.0.0"
directories = "5.0.1"
fern = { version = "0.6.2", features = ["colored"] }
fs-err = "2.9.0"
handybars = "0.2.0"
log = "0.4.17"
notify = "6.0.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
symlink = "0.1.0"
thiserror = "1.0.40"

[dev-dependencies]
assert_matches = "1.5.0"
tempdir = "0.3.7"
